/*
 * // Copyright (C) <2020> <becon GmbH>
 * //
 * // This program is free software: you can redistribute it and/or modify
 * // it under the terms of the GNU General Public License as published by
 * // the Free Software Foundation, version 3 of the License.
 * //
 * // This program is distributed in the hope that it will be useful,
 * // but WITHOUT ANY WARRANTY; without even the implied warranty of
 * // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * // GNU General Public License for more details.
 * //
 * // You should have received a copy of the GNU General Public License
 * // along with this program. If not, see <http://www.gnu.org/licenses/>.
 */

plugins {
	id 'org.springframework.boot' version '3.0.0'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id 'java'
	id 'com.google.protobuf' version '0.9.4'
}

group = 'com.becon'
<<<<<<< HEAD
version = '4.8.4'
=======
version = '5.0'
>>>>>>> origin/version5.0
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

ext {
	grpcVersion = '1.66.0'
	protobufVersion = '3.25.1'
}

tasks.named('bootJar') {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

test {
	useJUnitPlatform()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
	implementation 'org.springframework.boot:spring-boot-starter-quartz'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-data-ldap'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-web-services'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.session:spring-session-core'
	implementation 'org.springframework.security:spring-security-ldap'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.4'
	implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.2'
	implementation 'org.liquibase:liquibase-core'
<<<<<<< HEAD
	implementation 'org.openjdk.nashorn:nashorn-core:15.4'
	implementation 'com.nimbusds:nimbus-jose-jwt:9.30.2'
	implementation 'org.eclipse.jgit:org.eclipse.jgit:6.5.0.202303070854-r'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
	implementation 'wsdl4j:wsdl4j:1.6.3'
	implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'com.github.java-json-tools:json-patch:1.13'
	implementation 'javax.json:javax.json-api:1.1.4'
	implementation 'org.jsoup:jsoup:1.13.1'
	implementation 'com.google.zxing:core:3.4.1'
	implementation 'com.warrenstrange:googleauth:1.4.0'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.1'
	implementation "io.grpc:grpc-protobuf:1.66.0"
	implementation "io.grpc:grpc-stub:1.66.0"
	implementation "io.grpc:grpc-netty-shaded:1.66.0"
	implementation "com.google.protobuf:protobuf-java-util:3.25.1"
	compileOnly 'org.apache.tomcat:annotations-api:6.0.53'
	compileOnly 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	runtimeOnly 'mysql:mysql-connector-java'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.mockito:mockito-inline:5.2.0'
=======
	runtimeOnly    'mysql:mysql-connector-java'

	// ── gRPC / Protobuf ───────────────────────────────────────────────────────
	implementation "io.grpc:grpc-protobuf:${grpcVersion}"
	implementation "io.grpc:grpc-stub:${grpcVersion}"
	implementation "io.grpc:grpc-netty-shaded:${grpcVersion}"
	implementation "com.google.protobuf:protobuf-java-util:${protobufVersion}"

	// ── Security & auth ───────────────────────────────────────────────────────
	implementation "com.nimbusds:nimbus-jose-jwt:${nimbusJwtVersion}"
	implementation "com.warrenstrange:googleauth:${googleAuthVersion}"
	implementation "com.google.zxing:core:${zxingVersion}"

	// ── HTTP & web utilities ──────────────────────────────────────────────────
	implementation "org.apache.httpcomponents.client5:httpclient5:${httpclient5Version}"
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"
	implementation "wsdl4j:wsdl4j:1.6.3"
	implementation "org.jsoup:jsoup:${jsoupVersion}"

	// ── Data processing ───────────────────────────────────────────────────────
	implementation "com.github.java-json-tools:json-patch:${jsonPatchVersion}"
	implementation "javax.json:javax.json-api:${javaxJsonVersion}"
	implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonJsr310Ver}"

	// Comment-aware YAML parser used by the application-config endpoints to
	// round-trip application.yml without losing comments.
	implementation 'org.snakeyaml:snakeyaml-engine:2.7'

	// ── Scripting & tooling ───────────────────────────────────────────────────
	implementation "org.openjdk.nashorn:nashorn-core:${nashornVersion}"
	implementation "org.eclipse.jgit:org.eclipse.jgit:${jgitVersion}"

	// ── Code generation (compile-time only) ───────────────────────────────────
	compileOnly         "org.mapstruct:mapstruct:${mapstructVersion}"
	compileOnly         "org.apache.tomcat:annotations-api:${tomcatAnnotVer}"
	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

	// ── Unit + slice test dependencies ────────────────────────────────────────
	// spring-boot-starter-test pulls in JUnit 5, Mockito, AssertJ, MockMvc,
	// JSONassert, and JsonPath — do not declare these individually.
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation "org.mockito:mockito-inline:${mockitoInlineVer}"

	// ── Testcontainers ────────────────────────────────────────────────────────
	// The BOM aligns all Testcontainers module versions — never pin individual
	// module versions manually, always rely on the BOM.
	testImplementation platform("org.testcontainers:testcontainers-bom:${testcontainersVersion}")
	testImplementation 'org.testcontainers:junit-jupiter'  // @Container lifecycle
	testImplementation 'org.testcontainers:mariadb'        // MariaDBContainer
	testImplementation 'org.testcontainers:mongodb'        // MongoDBContainer

	// ── Async assertions ──────────────────────────────────────────────────────
	// Use await().untilAsserted(…) instead of Thread.sleep() in event-driven
	// and async tests.
	testImplementation "org.awaitility:awaitility:${awaitilityVersion}"

	// ── Embedded LDAP ─────────────────────────────────────────────────────────
	// In-process directory server for slice-testing LdapVerificationService.
	// Test-scope only — never reachable from src/main, never in the boot JAR.
	testImplementation 'com.unboundid:unboundid-ldapsdk:6.0.11'

	// ── Test runtime ──────────────────────────────────────────────────────────
	// H2 — in-memory database for @DataJpaTest slice tests (no Docker needed).
	testRuntimeOnly 'com.h2database:h2'

	// MariaDB JDBC driver — required at runtime so Testcontainers can open a
	// JDBC connection to the MariaDB container in integration tests.
	// Without this, Spring throws "No suitable driver found for jdbc:mariadb://…"
	// even though the container started successfully.
	testRuntimeOnly "org.mariadb.jdbc:mariadb-java-client:${mariadbVersion}"
>>>>>>> origin/version5.0
}

def generatedFilesBaseDir = "${buildDir}/generated/source/proto"
protobuf {
	protoc {
		artifact = "com.google.protobuf:protoc:${protobufVersion}"
	}
	clean {
		delete generatedFilesBaseDir
	}
	plugins {
		grpc {
			artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
		}
	}
	generateProtoTasks {
		all()*.plugins {
			grpc {}
		}
	}
}

sourceSets {
	main {
		java {
			srcDir "${generatedFilesBaseDir}/main/java"
			srcDir "${generatedFilesBaseDir}/main/grpc"
		}
	}
}
